--- a/assets/style.css
+++ b/assets/style.css
@@ -237,6 +237,21 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em;
 }
+footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+	padding-top: 20px;
+	padding-bottom: 10px;
+	text-align: center;
+}
+footer li {
+	list-style: none;
+}
+.footer__title {
+	font-weight: bold;
+}
 
 @media all and (max-width: 1180px) {
 	.picture {
@@ -253,7 +268,6 @@ input[type="submit"] {
 		width: 100%;
 	}
 }
-
 @media all and (max-width: 1000px) {
 	#about{
 		flex-direction: column;
@@ -345,6 +359,11 @@ input[type="submit"] {
 	}
 	.picture {
 		width: 80%;
+	}
+	footer {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
 	}
 }
 
