--- a/assets/style.css
+++ b/assets/style.css
@@ -129,7 +129,6 @@ body {
 	display: flex;
 	font-size: 24px;
 }
-
 .quote {
 	width: 70%;
 	margin: auto;
@@ -137,7 +136,7 @@ body {
 }
 .quote__text {
 	font-weight: 300;
-
+	font-size: calc(1.375rem + 1.5vw);
 }
 .quote__author {
 	font-weight: 800;
