--- a/assets/style.css
+++ b/assets/style.css
@@ -136,7 +136,7 @@ body {
 }
 .quote__text {
 	font-weight: 300;
-	font-size: calc(1.375rem + 1.5vw);
+	font-size: 30px;
 }
 .quote__author {
 	font-weight: 800;
