--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,15 @@ body {
 	width: 20px;
 }
 
+.carousel-control-bg {
+	background: #000000;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+}
+
 #about {
 	display: flex;
 	background-color: #F6D2B8;
